compiler/e2e/test/snapshot/ir/expression/resume/resume_incorrect_type/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: mismatched types: expected `int32`, found `bool`
   ╭─ compiler/e2e/test/snapshot/ir/expression/resume/resume_incorrect_type/main.pnx:10:20
   │
10 │             resume(true)
   │                    ^^^^ expected `int32`, found `bool`
   │
   = ensure the expression type matches the expected type

error: Compilation aborted due to 1 error(s)



stdout:
